--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
 		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
 		<init-param>
 			<param-name>jersey.config.server.provider.packages</param-name>
-			<param-value>com.unity.rest</param-value>
+			<param-value>com.unity.rest;com.unity.exception;com.unity.jersey;com.unity.jersey.provider</param-value>
 		</init-param>
 		<init-param>
 			<param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
@@ -19,6 +19,7 @@
     		<param-name>jersey.config.server.provider.classnames</param-name>
     		<param-value>org.glassfish.jersey.filter.LoggingFilter</param-value>
 		</init-param>
+		 
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
